--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-import scikit-learn
-import pandas as pd
-import numpy as np
-import pickle
-import joblib
-import streamlit as st
+scikit-learn
+pandas
+numpy
+pickle
+joblib
+streamlit
+
