--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,31 +9,39 @@ on:
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  contents: read
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        python-version: "3.10"
+        python-version: '3.8'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+        pip install -r requirements.txt
+
+    - name: Install DVC
+      run: pip install dvc
+
+    - name: Pull DVC data
+      run: dvc pull
+      env:
+        DVC_REMOTE_USER: ${{ secrets.DVC_REMOTE_USER }}
+        DVC_REMOTE_PASSWORD: ${{ secrets.DVC_REMOTE_PASSWORD }}
+
+    - name: Build Docker image
+      run: docker build -t my_app:latest .
+
+    - name: Run tests
+      run: docker run my_app:latest pytest tests
+
+    - name: Run application
+      run: docker run -d -p 8000:8000 my_app:latest
+
