--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Docker Pipeline
 
 on: [push, pull_request]
 
@@ -19,16 +19,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install dvc[gs]
-
-    - name: Configure DVC remote
-      run: |
-        dvc remote add -d final_project_mlops ${{ secrets.DVC_REMOTE_URL }}
-        echo "${{ secrets.GDRIVE_CREDENTIALS_DATA }}" > gdrive_credentials.json
-        dvc remote modify final_project --local gdrive_credentials_file gdrive_credentials.json
-
-    - name: Pull DVC data
-      run: dvc pull
 
     - name: Run tests
       run: pytest tests/
@@ -38,3 +28,9 @@ jobs:
 
     - name: Run Docker Compose
       run: docker-compose up -d
+
+    - name: Run Integration Tests
+      run: docker-compose run test
+
+    - name: Stop Docker Compose
+      run: docker-compose down
